# hci

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  contraction_engineering.ipynb  doxygen_files.html  genindex.html  hci.html  hci.lib.html  index.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  scratch.ipynb  scratch_calcs.ipynb  scratch_testing.ipynb  search.html  searchindex.js  setup.py
.github/workflows/: gh-pages.yml
.ipynb_checkpoints/: scratch-checkpoint.ipynb  scratch_testing-checkpoint.ipynb
_modules/: index.html
_modules/hci/: exceptions.html  hci_uhf.html
_modules/hci/lib/: hci_contract.html  (+4 more)
_sources/: doxygen_files.rst.txt  hci.lib.rst.txt  hci.rst.txt  index.rst.txt  modules.rst.txt
_sources/doxygen_files/: enlarge.rst.txt  rank.rst.txt
docs/: Doxyfile  Doxyfile.bak
docs/source/: conf.py  hci.lib.rst  hci.rst  index.rst  modules.rst
doxygen_files/: contract.html  enlarge.html  rank.html  store.html
examples/: sto3g_h2o_cation.py
hci/: exceptions.py  hci_uhf.py  requirements.txt
hci/.ipynb_checkpoints/: __init__-checkpoint.py  hci_uhf-checkpoint.py
hci/lib/: CMakeLists.txt  __init__.py  hci.h  hci_contract.c  hci_contract.h  hci_contract.py  hci_enlarge.c  hci_enlarge.h  hci_enlarge.py  hci_rank.c  hci_rank.h  hci_rank.py  hci_store.c  hci_store.h  hci_store.py  hci_utils.py  lib_doc.dox  test.c
hci/lib/.ipynb_checkpoints/: __init__-checkpoint.py  hci-checkpoint.h  hci_rank-checkpoint.c  hci_rank-checkpoint.h  hci_store-checkpoint.h  hci_utils-checkpoint.py
hci/lib/docs/: Doxyfile
(+12 files in other folders)
