[build-system]
requires = [
    "scikit-build-core"
]
build-backend = "scikit_build_core.build"

[project]
name = "hci"
version = "0.1.0"
authors = [
  { name="Simon Britton", email="obritton2022@gmail.com" },
]
description = "An inefficient implementation of the HCI selection algorithm for PySCF"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: OS Independent",
    "Private :: Do Not Upload"
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "pyscf",
    "numpy"
]

[project.urls]
Homepage = "https://osbritton1.github.io/hci/"
Issues = "https://github.com/osbritton1/hci/issues"

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme", "breathe"]

[tool.scikit-build]
wheel.install-dir = "build"